feat: add after/before pipeline in ViewConfig

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,12 @@ rasterio
 tqdm
 rx
 qt-widgets
-pyqtgraph>=0.12.1
+pyqtgraph
 pyqt5
 pyqt5-tools
-qimage2ndarray
 qtconsole
 
 pyqttango
-
 
 scikit-image
 opencv-python
